# avp-tropic

./: .clang-format  .gitignore  AVP_README.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  mkdocs.yml  ts_sw_setup.yml  versions.json
.github/workflows/: clang_format_check.yml  coverage.yml  esp32_build_examples.yml  functional_mock_tests.yml  integration_tests.yml  linux_build_examples.yml  model_run_examples.yml  release_new_version.yml  run_examples.yml  static_analysis.yml  stm32_build_examples.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  lt_ex_registry.c.inc  lt_test_registry.c.inc
avp/: avp_tropic.c  avp_tropic.h
cal/mbedtls_v4/: libtropic_mbedtls_v4.h  lt_mbedtls_v4_aesgcm.c  lt_mbedtls_v4_hmac_sha256.c  (+2 more)
cmake/: strict_compile_flags.cmake
docs/: faq.md
hal/stm32/stm32u5_tropic_click/: CMakeLists.txt  libtropic_port_stm32u5_tropic_click.c  libtropic_port_stm32u5_tropic_click.h
include/: libtropic.h  libtropic_common.h  libtropic_l2.h  libtropic_l3.h  libtropic_logging.h  libtropic_macros.h  libtropic_port.h  libtropic_secure_memzero.h
src/: libtropic.c  libtropic_default_sh0_keys.c  libtropic_l2.c  libtropic_l3.c  lt_aesgcm.h  lt_asn1_der.c  lt_asn1_der.h  lt_crc16.c  lt_crc16.h  lt_crypto_common.h  lt_hkdf.c  lt_hkdf.h  lt_hmac_sha256.h  lt_l1.c  lt_l1.h  lt_l2_api_structs.h  lt_l2_frame_check.c  lt_l3_api_structs.h  lt_l3_process.c  lt_port_wrap.h  lt_secure_memzero.c  lt_secure_memzero.h  lt_sha256.h  lt_tr01_attrs.c  lt_tr01_attrs.h  lt_x25519.h
v3.1.0/: 404.html  index.html  sitemap.xml
(+343 files in other folders)
